fix: move bulk-delete endpoints to dataset level
