# app/sdms/src/services/subproject/model.ts
@@ -31,25 +31,3 @@ export interface ISubprojectAcl {
     admins: string[],
     viewers: string[];
 }
-
-export interface IDeleteOperationModel {
-    operation_id: string;
-}
-
-export interface IDeleteOperationQueueTaskModel {
-    operation_id: string;
-    tenant: string;
-    subproject: string;
-    path: string;
-}
-
-export interface IDeleteOperationStatusModel {
-    operation_id: string;
-    status: string;
-    created_at?: string;
-    created_by?: string;
-    last_updated_at?: string;
-    dataset_cnt?: number;
-    deleted_cnt?: number;
-    failed_cnt?: number;
-}
